--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
 </head>
 <body>
     
-    <button id="speaker" onclick="speak()">Click me!!!!</button>
+    <div class="speaker-holder">
+        <button class="speaker" id="speaker" onclick="speak()">Click me Random!!!!</button>
+        <button class="speaker" id="speaker-bajanda" onclick="speak(2)">Click me!!!! Bajanda</button>
+        <button class="speaker" id="speaker-do-me" onclick="speak(1)">Click me!!!! Do me by Dylan</button>
+        <button class="speaker" id="speaker-mall" onclick="speak(0)">Click me!!!! Let's go to the mall</button>
+    </div>
+
 
     <script src="./script.js"></script>
 </body>
