Added more songs

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <div class="button-container">
         <div class="speaker-holder">
             <button class="speaker" id="speaker" onclick="speak()">Click me Random!!!!</button>
+            <button class="speaker" id="speaker-light" onclick="speak(4)">Click me!!!! To the light</button>
+            <button class="speaker" id="speaker-kanye" onclick="speak(3)">Click me!!!! I love it</button>
             <button class="speaker" id="speaker-bajanda" onclick="speak(2)">Click me!!!! Bajanda</button>
             <button class="speaker" id="speaker-do-me" onclick="speak(1)">Click me!!!! Do me by Dylan</button>
             <button class="speaker" id="speaker-mall" onclick="speak(0)">Click me!!!! Let's go to the mall</button>
