--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
     
     <div class="button-container">
         <div class="speaker-holder">
-            <button class="speaker" id="speaker" onclick="speak()">Click me Random!!!!</button>
-            <button class="speaker" id="speaker-light" onclick="speak(3)">Click me!!!! To the light</button>
-            <button class="speaker" id="speaker-kanye" onclick="speak(4)">Click me!!!! I love it</button>
-            <button class="speaker" id="speaker-bajanda" onclick="speak(2)">Click me!!!! Bajanda</button>
-            <button class="speaker" id="speaker-do-me" onclick="speak(1)">Click me!!!! Do me by Dylan</button>
-            <button class="speaker" id="speaker-mall" onclick="speak(0)">Click me!!!! Let's go to the mall</button>
+            <button class="speaker" id="speaker" onclick="speak()">Random!!!!</button>
+            <button class="speaker" id="speaker-light" onclick="speak(5)">Man's not Hot</button>
+            <button class="speaker" id="speaker-kanye" onclick="speak(4)">I love it</button>
+            <button class="speaker" id="speaker-light" onclick="speak(3)">To the light</button>
+            <button class="speaker" id="speaker-bajanda" onclick="speak(2)">Bajanda</button>
+            <button class="speaker" id="speaker-do-me" onclick="speak(1)">Do me by Dylan</button>
+            <button class="speaker" id="speaker-mall" onclick="speak(0)">Let's go to the mall</button>
             <button class="speaker-cancel" onclick="stopSpeak()">Stop this madness!!!!!</button>
         </div>
 
