Added another one Vitas 7th element

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <div class="button-container">
         <div class="speaker-holder">
             <button class="speaker" id="speaker" onclick="speak()">Random!!!!</button>
+            <button class="speaker" id="speaker-light" onclick="speak(6)">7th Element</button>
             <button class="speaker" id="speaker-light" onclick="speak(5)">Man's not Hot</button>
             <button class="speaker" id="speaker-kanye" onclick="speak(4)">I love it</button>
             <button class="speaker" id="speaker-light" onclick="speak(3)">To the light</button>
